--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ python = "^3.11"
 requests = "^2.31.0"
 
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^7.2.4"
+sphinx-rtd-theme = "^1.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
