--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ homepage = "https://github.com/markpbaggett/archiveswurm"
 repository = "https://github.com/markpbaggett/archiveswurm"
 
 [tool.poetry.dependencies]
-python = "^3.8 || ^3.9 || ^3.10 || ^3.11"
+python = "^3.8 || ^3.9 || ^3.10 || ^3.11 || ^3.12"
 requests = "^2.31.0"
 
 
